@Deprecated된 new Double(source) 대신 Double.valueOf(source)로 변경